add all worlds and test logic

--- a/personal-universe/index.html
+++ b/personal-universe/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=6426b8c75d783b00125f1b5a&product=inline-share-buttons&source=platform" async="async"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Твоя Вселенная</title>
   </head>
   <body>
     <div id="app"></div>
