--- a/personal-universe/index.html
+++ b/personal-universe/index.html
@@ -6,6 +6,8 @@
   <meta prefix="og: http://ogp.me/ns#" />
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://apersonaluniverse.netlify.app">
+  <meta property="og:title" content="Тест: из какой ты Вселенной?">
+  <meta property="og:description" content="Пройди этот тест, чтобы узнать, из какой вселенной ты родом. Всего несколько вопросов помогут тебе понять свое скрытое происхождение и открыть фантастический мир, который действительно созвучен твоей душе.">
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Твоя Вселенная</title>
