--- a/personal-universe/index.html
+++ b/personal-universe/index.html
@@ -9,7 +9,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Твоя Вселенная</title>
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9JW3VBG4JB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-9JW3VBG4JB');
+</script>
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
